--- a/strand/iOS/Strand/Strand/DFOutgoingCardViewController.xib
+++ b/strand/iOS/Strand/Strand/DFOutgoingCardViewController.xib
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6254"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFOutgoingCardViewController">
             <connections>
-                <outlet property="swipableButtonView" destination="YTX-Vv-qtQ" id="Apb-x5-Kyx"/>
+                <outlet property="cardView" destination="wM8-qn-rxH" id="oTf-RE-Pc8"/>
+                <outlet property="noButton" destination="tyk-9A-zHn" id="4mB-8Y-Fpd"/>
+                <outlet property="suggestionContentView" destination="1S3-KY-HEu" id="Mbp-2s-4YT"/>
                 <outlet property="view" destination="AUp-5O-Ctk" id="G5C-sf-kMR"/>
+                <outlet property="yesButton" destination="ILM-r2-ii2" id="Q7t-JQ-06S"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -15,17 +19,70 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-Vv-qtQ" customClass="DFSwipableButtonView">
-                    <rect key="frame" x="8" y="60" width="584" height="540"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wM8-qn-rxH" userLabel="Card view">
+                    <rect key="frame" x="10" y="40" width="580" height="440"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1S3-KY-HEu" customClass="DFOutgoingCardContentView">
+                            <rect key="frame" x="4" y="0.0" width="572" height="420"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="1S3-KY-HEu" secondAttribute="trailing" constant="4" id="FH1-fa-jLq"/>
+                        <constraint firstItem="1S3-KY-HEu" firstAttribute="top" secondItem="wM8-qn-rxH" secondAttribute="top" id="Psv-49-9Uu"/>
+                        <constraint firstAttribute="bottom" secondItem="1S3-KY-HEu" secondAttribute="bottom" constant="20" id="Y4u-bk-VsV"/>
+                        <constraint firstItem="1S3-KY-HEu" firstAttribute="leading" secondItem="wM8-qn-rxH" secondAttribute="leading" constant="4" id="ruJ-h1-iZ7"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wff-mU-r3l" userLabel="Button Wrapper">
+                    <rect key="frame" x="228" y="500" width="144" height="40"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tyk-9A-zHn" customClass="GBFlatButton">
+                            <rect key="frame" x="8" y="0.0" width="32" height="40"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <inset key="titleEdgeInsets" minX="-2" minY="0.0" maxX="-2" maxY="0.0"/>
+                            <state key="normal" title="Hide">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILM-r2-ii2" customClass="GBFlatButton">
+                            <rect key="frame" x="100" y="0.0" width="36" height="40"/>
+                            <color key="backgroundColor" red="0.42352941179999998" green="0.81960784310000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <inset key="titleEdgeInsets" minX="-2" minY="0.0" maxX="-2" maxY="0.0"/>
+                            <state key="normal" title="Send">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="tyk-9A-zHn" secondAttribute="bottom" id="7bU-Kf-bri"/>
+                        <constraint firstItem="ILM-r2-ii2" firstAttribute="top" secondItem="wff-mU-r3l" secondAttribute="top" id="Kat-0O-sMs"/>
+                        <constraint firstItem="tyk-9A-zHn" firstAttribute="leading" secondItem="wff-mU-r3l" secondAttribute="leading" constant="8" id="QrW-qy-WsF"/>
+                        <constraint firstItem="tyk-9A-zHn" firstAttribute="top" secondItem="wff-mU-r3l" secondAttribute="top" id="X1Q-j4-lfL"/>
+                        <constraint firstAttribute="height" constant="40" id="ZMO-fN-iOC"/>
+                        <constraint firstItem="ILM-r2-ii2" firstAttribute="leading" secondItem="tyk-9A-zHn" secondAttribute="trailing" constant="60" id="l7K-ON-zCo"/>
+                        <constraint firstAttribute="trailing" secondItem="ILM-r2-ii2" secondAttribute="trailing" constant="8" id="uwJ-KQ-pFV"/>
+                        <constraint firstAttribute="bottom" secondItem="ILM-r2-ii2" secondAttribute="bottom" id="vSB-kd-4MO"/>
+                    </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="YTX-Vv-qtQ" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" priority="900" constant="60" id="Kwx-gj-dNz"/>
-                <constraint firstAttribute="bottom" secondItem="YTX-Vv-qtQ" secondAttribute="bottom" id="TmF-uI-wGb"/>
-                <constraint firstAttribute="trailing" secondItem="YTX-Vv-qtQ" secondAttribute="trailing" constant="8" id="fAi-C9-zgU"/>
-                <constraint firstItem="YTX-Vv-qtQ" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="8" id="zXH-uS-afS"/>
+                <constraint firstItem="wM8-qn-rxH" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" constant="40" id="1HX-DC-Z3T"/>
+                <constraint firstItem="wff-mU-r3l" firstAttribute="top" secondItem="wM8-qn-rxH" secondAttribute="bottom" constant="20" id="FPk-8o-4Em"/>
+                <constraint firstItem="wM8-qn-rxH" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="10" id="I0g-lm-HNU"/>
+                <constraint firstAttribute="centerX" secondItem="wff-mU-r3l" secondAttribute="centerX" id="WEF-l4-Uch"/>
+                <constraint firstAttribute="bottom" secondItem="wff-mU-r3l" secondAttribute="bottom" constant="60" id="ZFS-3p-Ldd"/>
+                <constraint firstAttribute="trailing" secondItem="wM8-qn-rxH" secondAttribute="trailing" constant="10" id="xJK-2f-itO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <point key="canvasLocation" x="628" y="487"/>
