--- a/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
+++ b/strand/iOS/Strand/Strand/DFFriendProfileViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -48,14 +48,14 @@
                                 <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="lwp-5m-Eoa"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="QmR-gx-IVb">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="200" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="QmR-gx-IVb">
                             <rect key="frame" x="75" y="30" width="425" height="21"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9R-6B-DbB" userLabel="Friend toggle button" customClass="GBFlatButton">
-                            <rect key="frame" x="508" y="38" width="84" height="28"/>
+                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="999" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9R-6B-DbB" userLabel="Friend toggle button" customClass="GBFlatButton">
+                            <rect key="frame" x="508" y="35" width="84" height="28"/>
                             <color key="backgroundColor" red="0.42352941179999998" green="0.81960784310000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <inset key="contentEdgeInsets" minX="14" minY="5" maxX="15" maxY="5"/>
@@ -76,7 +76,7 @@
                         <constraint firstItem="vRE-Zm-eLd" firstAttribute="leading" secondItem="iNL-1h-xwh" secondAttribute="trailing" constant="-14" id="3EU-g5-hVt"/>
                         <constraint firstItem="vRE-Zm-eLd" firstAttribute="top" secondItem="Nc7-0m-VWp" secondAttribute="top" constant="26" id="7y4-7d-Jeb"/>
                         <constraint firstItem="vRE-Zm-eLd" firstAttribute="centerY" secondItem="iNL-1h-xwh" secondAttribute="centerY" id="8BO-l4-ZqK"/>
-                        <constraint firstItem="vRE-Zm-eLd" firstAttribute="centerY" secondItem="d9R-6B-DbB" secondAttribute="centerY" constant="-3.5" id="GC8-5n-bkX"/>
+                        <constraint firstItem="vRE-Zm-eLd" firstAttribute="centerY" secondItem="d9R-6B-DbB" secondAttribute="centerY" id="GC8-5n-bkX"/>
                         <constraint firstAttribute="trailing" secondItem="d9R-6B-DbB" secondAttribute="trailing" constant="8" id="Lfj-am-jnO"/>
                         <constraint firstItem="iNL-1h-xwh" firstAttribute="leading" secondItem="Nc7-0m-VWp" secondAttribute="leading" id="OHx-hW-qvF"/>
                         <constraint firstItem="d9R-6B-DbB" firstAttribute="leading" secondItem="QmR-gx-IVb" secondAttribute="trailing" constant="8" id="OgR-um-kxq"/>
