--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -113,7 +113,7 @@
 				<th class='before b-r' colspan='3' > </th>
 				<th class='before b-r' colspan='1' > Shared <br> Instances </th>
 				<th class='actions b-r' colspan='3'> Actions (7d) </th>
-				<th class='notifications b-r' colspan='2'> Notifications </th>
+				<th class='notifications b-r' colspan='3'> Notifications </th>
 				<th class='after' colspan='7' > </th>
 			</tr>
 			<tr class='ui-row-header' >
@@ -125,6 +125,7 @@
 				<td class='favs center b-r'> Favs </td>
 				<td class='comments center b-r'> Comments </td>
 				<td class='notifications center b-r'> Sent <br> (7d)</td>
+				<td class='notifications center b-r'> Suggestions </td>
 				<td class='last-not-timestamp b-r'> Timestamp </td>
 				<td class='friends b-r'> fFriends | <br> rFriends</td>
 				<td class='contacts b-r'> Contacts </td> 
@@ -144,6 +145,7 @@
 				<td class='favs center b-r'> {{entry.weeklyFavs }} </td>
 				<td class='comments center b-r'> {{entry.weeklyComments }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
+				<td class='notifications right b-r'> {{ entry.suggestionNotifications}} </td>
 				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>
 				<td class='friends b-r center'> {{ entry.ffriendCount}} | {{ entry.rfriendCount}} </td>
 				<td class='contacts b-r center'> {{ entry.contactCount }} </td>
