--- a/strand/iOS/Strand/Strand/DFImageNUXViewViewController.xib
+++ b/strand/iOS/Strand/Strand/DFImageNUXViewViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFImageNUXViewViewController">
@@ -32,9 +32,9 @@
                         <constraint firstAttribute="height" constant="180" id="ozs-nO-U0G"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Explanation" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="285" translatesAutoresizingMaskIntoConstraints="NO" id="sp5-ig-Qxp">
-                    <rect key="frame" x="106" y="287" width="108" height="26"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" misplaced="YES" text="Explanation" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" preferredMaxLayoutWidth="255" translatesAutoresizingMaskIntoConstraints="NO" id="sp5-ig-Qxp">
+                    <rect key="frame" x="106" y="307" width="108" height="26"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -56,12 +56,12 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="QZI-9n-LYd" firstAttribute="top" secondItem="Bfu-tE-uGi" secondAttribute="bottom" constant="20" id="3Wd-tj-7aX"/>
-                <constraint firstItem="sp5-ig-Qxp" firstAttribute="top" secondItem="QZI-9n-LYd" secondAttribute="bottom" constant="20" id="5TV-KT-hmR"/>
+                <constraint firstItem="sp5-ig-Qxp" firstAttribute="top" secondItem="QZI-9n-LYd" secondAttribute="bottom" constant="40" id="5TV-KT-hmR"/>
                 <constraint firstItem="Bfu-tE-uGi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="43" id="66x-e4-9FJ"/>
                 <constraint firstAttribute="bottom" secondItem="xNI-dk-U9n" secondAttribute="bottom" constant="60" id="DX5-QX-4ZW"/>
                 <constraint firstItem="xNI-dk-U9n" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="ZwC-7i-LNx"/>
                 <constraint firstAttribute="centerX" secondItem="Bfu-tE-uGi" secondAttribute="centerX" id="aOj-wa-K8H"/>
-                <constraint firstItem="sp5-ig-Qxp" firstAttribute="top" secondItem="QZI-9n-LYd" secondAttribute="bottom" constant="20" id="b16-2v-Ml2"/>
+                <constraint firstItem="sp5-ig-Qxp" firstAttribute="top" secondItem="QZI-9n-LYd" secondAttribute="bottom" constant="40" id="b16-2v-Ml2"/>
                 <constraint firstAttribute="centerX" secondItem="sp5-ig-Qxp" secondAttribute="centerX" id="g7R-e5-RFV"/>
                 <constraint firstAttribute="centerX" secondItem="QZI-9n-LYd" secondAttribute="centerX" id="g7d-0a-HEK"/>
                 <constraint firstAttribute="trailing" secondItem="xNI-dk-U9n" secondAttribute="trailing" constant="60" id="lZC-6p-8E9"/>
