--- a/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
+++ b/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -13,16 +13,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" horizontalCompressionResistancePriority="999" translatesAutoresizingMaskIntoConstraints="NO" id="5G5-OR-sYm" customClass="DFProfileStackView">
-                    <rect key="frame" x="275" y="37" width="50" height="50"/>
+                    <rect key="frame" x="0.0" y="35" width="60" height="60"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="3SX-co-lap"/>
-                        <constraint firstAttribute="width" priority="1" constant="50" id="JuJ-hI-cdj"/>
-                        <constraint firstAttribute="height" constant="50" id="YQa-HN-EEQ"/>
+                        <constraint firstAttribute="width" priority="1" constant="60" id="JuJ-hI-cdj"/>
+                        <constraint firstAttribute="height" constant="60" id="YQa-HN-EEQ"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z8y-4t-v0a">
-                    <rect key="frame" x="333" y="51" width="16" height="22"/>
+                    <rect key="frame" x="64" y="46" width="16" height="22"/>
                     <state key="normal" image="Assets/Icons/AddPersonButtonIcon.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -30,65 +29,61 @@
                         <action selector="addButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="YJt-7f-Fm0"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="1000" text="Send to Aseem" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuM-t7-6bp">
-                    <rect key="frame" x="8" y="8" width="584" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="Flo-hz-v6j"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="1000" text="Send to Aseem" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuM-t7-6bp">
+                    <rect key="frame" x="0.0" y="10" width="592" height="21"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7AH-le-Yhh">
-                    <rect key="frame" x="71" y="95" width="459" height="459"/>
+                    <rect key="frame" x="56" y="103" width="489" height="489"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="7AH-le-Yhh" secondAttribute="height" multiplier="1:1" id="QBy-fh-BaE"/>
                     </constraints>
                 </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write a caption..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKW-hs-o8O">
-                    <rect key="frame" x="15" y="562" width="570" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Write a caption..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZKW-hs-o8O">
+                    <rect key="frame" x="56" y="562" width="489" height="30"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="VnS-ip-Azx"/>
                     </constraints>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <constraints>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="z8y-4t-v0a" secondAttribute="trailing" constant="8" id="4nt-1N-bIH"/>
+                <constraint firstItem="ZKW-hs-o8O" firstAttribute="trailing" secondItem="7AH-le-Yhh" secondAttribute="trailing" id="5u1-O4-9qD"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7AH-le-Yhh" secondAttribute="trailing" id="65U-dt-zEk"/>
-                <constraint firstItem="wuM-t7-6bp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="9dl-ak-WHT"/>
+                <constraint firstItem="wuM-t7-6bp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="9dl-ak-WHT"/>
+                <constraint firstItem="ZKW-hs-o8O" firstAttribute="leading" secondItem="7AH-le-Yhh" secondAttribute="leading" id="ANg-fj-dqO"/>
                 <constraint firstAttribute="centerX" secondItem="7AH-le-Yhh" secondAttribute="centerX" id="ENJ-Rp-XJg"/>
-                <constraint firstItem="z8y-4t-v0a" firstAttribute="leading" secondItem="5G5-OR-sYm" secondAttribute="trailing" constant="8" id="FYF-aC-ONm"/>
+                <constraint firstItem="z8y-4t-v0a" firstAttribute="leading" secondItem="5G5-OR-sYm" secondAttribute="trailing" constant="4" id="FYF-aC-ONm"/>
                 <constraint firstItem="7AH-le-Yhh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="800" id="Gda-rg-tme"/>
                 <constraint firstItem="7AH-le-Yhh" firstAttribute="top" secondItem="5G5-OR-sYm" secondAttribute="bottom" constant="8" id="JPR-p0-arS"/>
-                <constraint firstItem="5G5-OR-sYm" firstAttribute="centerX" secondItem="wuM-t7-6bp" secondAttribute="centerX" id="LC6-rI-4hZ"/>
-                <constraint firstItem="wuM-t7-6bp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="N5e-ez-FKR"/>
-                <constraint firstAttribute="trailing" secondItem="ZKW-hs-o8O" secondAttribute="trailing" constant="15" id="Ncv-qa-Pcs"/>
+                <constraint firstItem="wuM-t7-6bp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="N5e-ez-FKR"/>
                 <constraint firstAttribute="trailing" secondItem="wuM-t7-6bp" secondAttribute="trailing" constant="8" id="ODO-Kr-yY0"/>
-                <constraint firstItem="5G5-OR-sYm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="PWh-IR-G1U"/>
-                <constraint firstAttribute="bottom" secondItem="ZKW-hs-o8O" secondAttribute="bottom" constant="8" id="QRm-TK-uFf"/>
+                <constraint firstItem="wuM-t7-6bp" firstAttribute="leading" secondItem="5G5-OR-sYm" secondAttribute="leading" id="OiA-Fh-Wet"/>
+                <constraint firstItem="ZKW-hs-o8O" firstAttribute="bottom" secondItem="7AH-le-Yhh" secondAttribute="bottom" id="QmZ-Qz-ffU"/>
                 <constraint firstAttribute="bottom" secondItem="7AH-le-Yhh" secondAttribute="bottom" priority="999" constant="8" id="Sl3-W3-KoK"/>
-                <constraint firstItem="ZKW-hs-o8O" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="TS7-cc-OtS"/>
-                <constraint firstItem="ZKW-hs-o8O" firstAttribute="top" secondItem="7AH-le-Yhh" secondAttribute="bottom" constant="8" id="Ud6-D1-qpF"/>
-                <constraint firstItem="5G5-OR-sYm" firstAttribute="top" secondItem="wuM-t7-6bp" secondAttribute="bottom" constant="8" id="jbU-R6-ZCj"/>
+                <constraint firstItem="5G5-OR-sYm" firstAttribute="top" secondItem="wuM-t7-6bp" secondAttribute="bottom" constant="4" id="jbU-R6-ZCj"/>
                 <constraint firstItem="7AH-le-Yhh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" id="jfS-7P-WCj"/>
-                <constraint firstItem="5G5-OR-sYm" firstAttribute="centerY" secondItem="z8y-4t-v0a" secondAttribute="centerY" constant="0.5" id="mgq-3u-La0"/>
-                <constraint firstItem="5G5-OR-sYm" firstAttribute="top" secondItem="wuM-t7-6bp" secondAttribute="bottom" constant="8" id="ukw-aG-KEA"/>
+                <constraint firstItem="5G5-OR-sYm" firstAttribute="centerY" secondItem="z8y-4t-v0a" secondAttribute="centerY" constant="8" id="mgq-3u-La0"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="addButton" destination="z8y-4t-v0a" id="Jl6-HC-R2I"/>
                 <outlet property="commentTextField" destination="ZKW-hs-o8O" id="pmd-R8-UnO"/>
-                <outlet property="commentTextFieldBottomConstraint" destination="QRm-TK-uFf" id="Xjs-dw-uRh"/>
                 <outlet property="imageView" destination="7AH-le-Yhh" id="ijF-vE-6Af"/>
                 <outlet property="profileStackView" destination="5G5-OR-sYm" id="wy5-dB-pKX"/>
                 <outlet property="topLabel" destination="wuM-t7-6bp" id="ITl-R6-yrm"/>
                 <outletCollection property="gestureRecognizers" destination="xs6-8j-AqU" appends="YES" id="Tbd-sh-RXZ"/>
             </connections>
-            <point key="canvasLocation" x="382.5" y="487"/>
+            <point key="canvasLocation" x="32" y="484"/>
         </view>
         <tapGestureRecognizer id="xs6-8j-AqU">
             <connections>
