--- a/strand/iOS/Strand/Strand/DFOutgoingCardViewController.xib
+++ b/strand/iOS/Strand/Strand/DFOutgoingCardViewController.xib
@@ -7,8 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFOutgoingCardViewController">
             <connections>
-                <outlet property="cardBottomConstraint" destination="063-gO-REY" id="RzI-bB-iHW"/>
-                <outlet property="cardView" destination="wM8-qn-rxH" id="oTf-RE-Pc8"/>
+                <outlet property="cardBottomConstraint" destination="i18-ad-LA9" id="UVU-WM-Gx0"/>
                 <outlet property="noButton" destination="tyk-9A-zHn" id="4mB-8Y-Fpd"/>
                 <outlet property="suggestionContentView" destination="1S3-KY-HEu" id="Mbp-2s-4YT"/>
                 <outlet property="view" destination="AUp-5O-Ctk" id="G5C-sf-kMR"/>
@@ -20,27 +19,9 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wM8-qn-rxH" userLabel="Card view">
-                    <rect key="frame" x="10" y="40" width="580" height="440"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1S3-KY-HEu" customClass="DFOutgoingCardContentView">
-                            <rect key="frame" x="4" y="0.0" width="572" height="420"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        </view>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="1S3-KY-HEu" secondAttribute="trailing" constant="4" id="FH1-fa-jLq"/>
-                        <constraint firstItem="1S3-KY-HEu" firstAttribute="top" secondItem="wM8-qn-rxH" secondAttribute="top" id="Psv-49-9Uu"/>
-                        <constraint firstAttribute="bottom" secondItem="1S3-KY-HEu" secondAttribute="bottom" constant="20" id="Y4u-bk-VsV"/>
-                        <constraint firstItem="1S3-KY-HEu" firstAttribute="leading" secondItem="wM8-qn-rxH" secondAttribute="leading" constant="4" id="ruJ-h1-iZ7"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                    </userDefinedRuntimeAttributes>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1S3-KY-HEu" customClass="DFOutgoingCardContentView">
+                    <rect key="frame" x="10" y="0.0" width="580" height="480"/>
+                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wff-mU-r3l" userLabel="Button Wrapper">
                     <rect key="frame" x="228" y="500" width="144" height="40"/>
@@ -78,13 +59,13 @@
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="wM8-qn-rxH" secondAttribute="bottom" priority="997" constant="10" id="063-gO-REY"/>
-                <constraint firstItem="wM8-qn-rxH" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" constant="40" id="1HX-DC-Z3T"/>
-                <constraint firstItem="wff-mU-r3l" firstAttribute="top" secondItem="wM8-qn-rxH" secondAttribute="bottom" priority="998" constant="20" id="FPk-8o-4Em"/>
-                <constraint firstItem="wM8-qn-rxH" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="10" id="I0g-lm-HNU"/>
+                <constraint firstItem="wff-mU-r3l" firstAttribute="top" secondItem="1S3-KY-HEu" secondAttribute="bottom" priority="998" constant="20" id="CoH-pA-vXU"/>
+                <constraint firstItem="1S3-KY-HEu" firstAttribute="leading" secondItem="AUp-5O-Ctk" secondAttribute="leading" constant="10" id="SCj-zn-a2A"/>
                 <constraint firstAttribute="centerX" secondItem="wff-mU-r3l" secondAttribute="centerX" id="WEF-l4-Uch"/>
                 <constraint firstAttribute="bottom" secondItem="wff-mU-r3l" secondAttribute="bottom" constant="60" id="ZFS-3p-Ldd"/>
-                <constraint firstAttribute="trailing" secondItem="wM8-qn-rxH" secondAttribute="trailing" constant="10" id="xJK-2f-itO"/>
+                <constraint firstAttribute="trailing" secondItem="1S3-KY-HEu" secondAttribute="trailing" constant="10" id="apX-NO-ESr"/>
+                <constraint firstItem="1S3-KY-HEu" firstAttribute="top" secondItem="AUp-5O-Ctk" secondAttribute="top" id="cEg-gh-TNb"/>
+                <constraint firstAttribute="bottom" secondItem="1S3-KY-HEu" secondAttribute="bottom" priority="997" constant="10" id="i18-ad-LA9"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <point key="canvasLocation" x="628" y="487"/>
